Update library.properties version

--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=Chatter-Library
-version=0.0.1
+version=1.0
 author=CircuitMess
 maintainer=Filip Budiša <filip@circuitmess.com>
-sentence=An Arduino library to program Chatter, your secure texting device
+sentence=An Arduino library to program Chatter, your secure texting device.
 paragraph=See more on https://circuitmess.com/chatter/
 category=Device Control
 url=https://circuitmess.com/chatter/
